# rnn

./: .gitignore  LICENSE  README.md  asdf.py  index copy 2.ipynb  index copy.ipynb  index.ipynb  inference.py  pyproject.toml  qwer.py  rewrite.py  rnn.ipynb  rnn.py  rnn_copy.py  train.py  train_copy.py
data/: eacc.txt  howtogetrich.txt  short.txt  stevejobs.txt  stevejobs_short.txt  urls.txt
