[tool.poetry]
name = "rnn"
version = "0.1.0"
description = ""
authors = ["Eric Chen <deeplearningericchen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
